// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The replace serializer should provide a helper to remove native elements from a web tree 1`] = `
<WrapperComponent>
  <div
    className="css-view-1dbjc4n"
  >
    <ChildComponent
      text="Hello world!"
    >
      <div
        className="css-text-76zvg2"
        dir="auto"
      >
        Hello world!
      </div>
    </ChildComponent>
  </div>
</WrapperComponent>
`;

exports[`The replace serializer should provide a helper to return the child of an element only 1`] = `
<WrapperComponent>
  <View>
    <div
      className="css-view-1dbjc4n"
    >
      <Text>
        <div
          className="css-text-76zvg2"
          dir="auto"
        >
          Hello world!
        </div>
      </Text>
    </div>
  </View>
</WrapperComponent>
`;

exports[`The replace serializer should provide a helper to return the children of an element only 1`] = `
Array [
  <ChildComponent
    text="Hello world1!"
  >
    <Text>
      Hello world1!
    </Text>
  </ChildComponent>,
  <ChildComponent
    text="Hello world2!"
  >
    <Text>
      Hello world2!
    </Text>
  </ChildComponent>,
  <ChildComponent
    text="Hello world3!"
  >
    <Text>
      Hello world3!
    </Text>
  </ChildComponent>,
]
`;

exports[`The replace serializer should provide a helper to return the component with props and no children 1`] = `
<WrapperComponent>
  <View>
    <div
      className="css-view-1dbjc4n"
    >
      <ChildComponent
        text="Hello world!"
      />
    </div>
  </View>
</WrapperComponent>
`;

exports[`The replace serializer should replace the expected component 1`] = `
<WrapperComponent>
  <View>
    <div
      className="css-view-1dbjc4n"
    >
      <Placeholder>
        <Text>
          Replaced
        </Text>
      </Placeholder>
    </div>
  </View>
</WrapperComponent>
`;

exports[`The replace serializer should replace the expected component completely 1`] = `
<WrapperComponent>
  <View>
    <div
      className="css-view-1dbjc4n"
    />
  </View>
</WrapperComponent>
`;
